--- a/.github/workflows/superbuild-devcontainer.yml
+++ b/.github/workflows/superbuild-devcontainer.yml
@@ -260,7 +260,7 @@ jobs:
         fi
 
         if [ "${{ inputs.mc-rtc-config-path }}" != '' ]; then
-          BUILD_ARGS="$BUILD_ARGS --build-arg MC_RTC_CONTROLLER_CONFIG="${{ inputs.mc-rtc-config-path }}"
+          BUILD_ARGS="$BUILD_ARGS --build-arg MC_RTC_CONTROLLER_CONFIG=${{ inputs.mc-rtc-config-path }}"
         fi
 
         for arg in ${{ inputs.build-args }}; do
