feat(package-project): update default matrix to build package on focal and jammy by default

--- a/.github/workflows/package-project.yml
+++ b/.github/workflows/package-project.yml
@@ -26,7 +26,7 @@ on:
         type: string
         default: |
           {
-            "dist": ["bionic", "focal"],
+            "dist": ["focal", "jammy"],
             "arch": ["i386", "amd64"],
             "exclude":
             [
