--- a/.github/workflows/package-project.yml
+++ b/.github/workflows/package-project.yml
@@ -156,6 +156,7 @@ jobs:
     - uses: actions/checkout@v4
       with:
         submodules: recursive
+    - uses: ssrobins/install-cmake@v1
     - name: Setup packaging parameters
       id: setup-parameters
       shell: bash
