--- a/.github/workflows/package-project.yml
+++ b/.github/workflows/package-project.yml
@@ -26,12 +26,8 @@ on:
         type: string
         default: |
           {
-            "dist": ["focal", "jammy"],
-            "arch": ["i386", "amd64"],
-            "exclude":
-            [
-              {"dist": "focal", "arch": "i386" }
-            ]
+            "dist": ["jammy"],
+            "arch": ["i386", "amd64"]
           }
       deps:
         description: "Dependencies package jobs that will be triggered by this workflow"
