ci(test): update rospack command to ros2 pkg prefix

--- a/.github/workflows/install-dependencies-ros.yml
+++ b/.github/workflows/install-dependencies-ros.yml
@@ -22,4 +22,4 @@ jobs:
       run: |
         set -x
         set -e
-        rospack find jvrc_description
+        ros2 pkg prefix jvrc_description
